# Thesis_V2

./: .gitignore  CMakeLists.txt  README.md  action.cc  action.hh  construction.cc  construction.hh  detector.cc  detector.hh  generator.cc  generator.hh  physics.cc  physics.hh  run.cc  run.hh  satellite_test.cc  vis.mac
pythonProject/: Backwards_calculation_Cyklotron.py  Backwards_calculation_testing.py  Bethe_bloch.py  Bethe_bloch_helperfunctions.py  Data_plotting.py  EventListExt_60deg.advelist  File_writer.py  Hydrogen in Air, Dry (ICRU-104) (gas).txt  Hydrogen in Air, Dry (ICRU-104) (gas)_1GeV.txt  Hydrogen in Aluminum.txt  Hydrogen in Aluminum_1GeV.txt  Hydrogen in Silicon.txt  Hydrogen in Silicon_1GeV.txt  SRIM_LET_VS_E_plotting.py  SRIM_data.py  Simple_calculation.py  Test.py  filtered_output.txt  filtered_output_60deg.txt  output.csv
pythonProject/HE p Krakow june2022 processed outputs/protons/: 01 225 MeV 00deg output.txt  03 225 MeV 30deg output.txt  05 225 MeV 60deg output.txt  10 150 MeV 00deg output.txt  12 150 MeV 30deg output.txt  14 150 MeV 60deg output.txt  19 70 MeV 00deg output.txt  21 70 MeV 30deg output.txt  23 70 MeV 60deg output.txt  28 32 MeV 00deg output.txt  30 32 MeV 30deg output.txt  32 32 MeV 60deg output.txt  37 8 MeV 00deg output.txt  39 8 MeV 30deg output.txt  41 8 MeV 60deg output.txt
